<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:keepScreenOn="true"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toStartOf="@id/right_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph"
        tools:context=".MainActivity" />

    <LinearLayout
        android:id="@+id/right_buttons"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00000000">

        <ImageButton
            android:id="@+id/btnStar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/circle"
            android:src="@drawable/baseline_auto_awesome_24"
            android:contentDescription="@string/star_button"
            android:scaleType="centerInside"
            android:padding="12dp" />

        <ImageButton
            android:id="@+id/btncamerar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/circle"
            android:src="@drawable/camera"
            android:contentDescription="@string/camera_button"
            android:scaleType="centerInside"
            android:padding="12dp" />

        <ImageButton
            android:id="@+id/btndrop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/circle"
            android:src="@drawable/drop"
            android:contentDescription="@string/hanger_button"
            android:scaleType="centerInside"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="#000000"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Undo Button (kiri) -->
        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back"
            android:contentDescription="@string/undo_button" />

        <!-- Spacer (biar tombol kanan ke ujung kanan) -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Gambar Button (kanan) -->
        <ImageButton
            android:id="@+id/btnImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/photo"
            android:contentDescription="@string/gallery_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
